Updated and improved tests